[project]
name = "moring-read"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"deptry>=0.25.1",
	"edge-tts>=7.2.8",
	"fastapi>=0.136.1",
	"faster-whisper>=1.1.0",
	"kokoro>=0.9.4",
	"kokoro-onnx>=0.5.0",
	"librosa>=0.11.0",
	"nltk>=3.9.4",
	"pillow>=12.2.0",
	"pyopenssl>=26.2.0",
	"python-multipart>=0.0.29",
	"soundfile>=0.13.1",
	"torch==2.4.1",
	"uvicorn>=0.47.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
